# vuln-scanner

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
.agents/: plan.md
.github/workflows/: ci.yml  scan.yml  validate-config.yml
docs/: setup.md
src/vuln_scanner/: __init__.py  config.py  main.py  orchestrator.py  repo_manager.py  utils.py
src/vuln_scanner/reporters/: sarif.py  summary.py
src/vuln_scanner/scanners/: base.py  checkov.py  dependency.py  gitleaks.py  registry.py  semgrep.py  trufflehog.py
tests/: test_orchestrator.py  test_repo_manager.py  test_sarif.py  test_scanners.py  test_summary.py
tests/fixtures/: checkov_output.json  gitleaks_output.json  semgrep_output.json  trufflehog_output.json
